Bug 630127.  Use a precise timer when we have animation frame callbacks.  r=dbaron